tests/sksl/errors/PrivateVariables.glsl
### Compilation failed:

error: 1: name '$a' is reserved
int $a;
    ^^
error: 2: name '$b' is reserved
void func(float2 $b) {
                 ^^
error: 3: name '$c' is reserved
    float $c[2];
          ^^
error: 4: name '$d' is reserved
    bool4 $d;
          ^^
4 errors
